yml/HostMapped/hostMapped.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: host-mapped-site
  namespace: pv-nfs
  name: host-mapped-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: host-mapped-site
  template:
    metadata:
      labels:
        app: host-mapped-site
    spec:
      volumes:
        - name: host-mapped-nfs
          persistentVolumeClaim:
            claimName: host-mapped-pvc
      containers:
        - image: nginx
          name: host-mapped-site
          volumeMounts:
            - name: host-mapped-nfs
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              cpu: 0m
              memory: 0Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 80
              hostPort: 80
              name: http
